Se corrigen dos avisos de Manejador y Persistencia